bugfix：对之前导入的文件的依赖文件，也导入了
