# src/api/services/ChatControllerService.ts
@@ -3,6 +3,7 @@
 /* tslint:disable */
 /* eslint-disable */
 import type { ApiResultCursorPageBaseResponseChatMessageResponse } from '../models/ApiResultCursorPageBaseResponseChatMessageResponse';
+import type { ApiResultListChatMessageResponse } from '../models/ApiResultListChatMessageResponse';
 import type { ApiResultMessage } from '../models/ApiResultMessage';
 import type { ApiResultVoid } from '../models/ApiResultVoid';
 import type { ChatMessageMarkRequest } from '../models/ChatMessageMarkRequest';
@@ -89,6 +90,28 @@ export class ChatControllerService {
             url: '/capi/chat/message/page',
             body: requestBody,
             mediaType: 'application/json',
+            errors: {
+                400: `Bad Request`,
+                405: `Method Not Allowed`,
+                429: `Too Many Requests`,
+                500: `Internal Server Error`,
+            },
+        });
+    }
+    /**
+     * @param roomId
+     * @returns ApiResultListChatMessageResponse OK
+     * @throws ApiError
+     */
+    public getAllMessage(
+        roomId: number,
+    ): CancelablePromise<ApiResultListChatMessageResponse> {
+        return this.httpRequest.request({
+            method: 'GET',
+            url: '/capi/chat/message/all',
+            query: {
+                'roomId': roomId,
+            },
             errors: {
                 400: `Bad Request`,
                 405: `Method Not Allowed`,
